--- a/ToyRenderer/ToyRenderer.vcxproj.filters
+++ b/ToyRenderer/ToyRenderer.vcxproj.filters
@@ -1687,6 +1687,41 @@
     <ClInclude Include="src\world\Time.h">
       <Filter>world</Filter>
     </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_audiosource.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_bassboostfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_biquadresonantfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_bus.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_c.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_dcremovalfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_echofilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_error.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_fader.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_fft.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_fftfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_file.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_file_hack_off.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_file_hack_on.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_filter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_flangerfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_freeverbfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_internal.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_lofifilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_misc.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_monotone.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_noise.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_openmpt.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_queue.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_robotizefilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_sfxr.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_speech.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_tedsid.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_thread.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_vic.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_vizsn.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_wav.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_waveshaperfilter.h" />
+    <ClInclude Include="src\vendor\soloud\soloud_wavstream.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
