--- a/ToyRenderer/ToyRenderer.vcxproj.filters
+++ b/ToyRenderer/ToyRenderer.vcxproj.filters
@@ -73,6 +73,9 @@
     <Filter Include="vendor\meshReader">
       <UniqueIdentifier>{C26A78D4-2E81-766A-77F8-018CE34D47F2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="vendor\soloud">
+      <UniqueIdentifier>{98145222-04D5-CD58-CD0F-17D6398F1235}</UniqueIdentifier>
+    </Filter>
     <Filter Include="vendor\spdlog">
       <UniqueIdentifier>{8BBC5F22-F77C-DB58-C0B7-24D62C372035}</UniqueIdentifier>
     </Filter>
@@ -1414,6 +1417,111 @@
     <ClInclude Include="src\vendor\meshReader\tinyobjloader.h">
       <Filter>vendor\meshReader</Filter>
     </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_audiosource.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_bassboostfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_biquadresonantfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_bus.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_c.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_dcremovalfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_echofilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_error.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_fader.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_fft.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_fftfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_file.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_file_hack_off.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_file_hack_on.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_filter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_flangerfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_freeverbfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_internal.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_lofifilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_misc.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_monotone.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_noise.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_openmpt.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_queue.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_robotizefilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_sfxr.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_speech.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_tedsid.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_thread.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_vic.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_vizsn.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_wav.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_waveshaperfilter.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vendor\soloud\soloud_wavstream.h">
+      <Filter>vendor\soloud</Filter>
+    </ClInclude>
     <ClInclude Include="src\vendor\spdlog\async.h">
       <Filter>vendor\spdlog</Filter>
     </ClInclude>
@@ -1687,41 +1795,6 @@
     <ClInclude Include="src\world\Time.h">
       <Filter>world</Filter>
     </ClInclude>
-    <ClInclude Include="src\vendor\soloud\soloud.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_audiosource.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_bassboostfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_biquadresonantfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_bus.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_c.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_dcremovalfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_echofilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_error.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_fader.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_fft.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_fftfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_file.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_file_hack_off.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_file_hack_on.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_filter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_flangerfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_freeverbfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_internal.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_lofifilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_misc.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_monotone.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_noise.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_openmpt.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_queue.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_robotizefilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_sfxr.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_speech.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_tedsid.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_thread.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_vic.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_vizsn.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_wav.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_waveshaperfilter.h" />
-    <ClInclude Include="src\vendor\soloud\soloud_wavstream.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
