changed git attribute to try to chaangethe language form html to cpp

--- a/.gitattributes
+++ b/.gitattributes
@@ -212,3 +212,7 @@ Procfile text
 *.exe binary
 *.out binary
 *.app binary
+
+#### Linguist
+# to change language of repo from html to cpp
+    *.js linguist-language=C++
