still trying to get rid of the html tag of the repo

--- a/.gitattributes
+++ b/.gitattributes
@@ -215,4 +215,4 @@ Procfile text
 
 #### Linguist
 # to change language of repo from html to cpp
-    *.js linguist-language=C++
+*.html linguist-vendored
