--- a/ToyRenderer/ToyRenderer.vcxproj
+++ b/ToyRenderer/ToyRenderer.vcxproj
@@ -154,7 +154,7 @@ IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-bi
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Audio\AudioEngine.h" />
-    <ClInclude Include="src\Audio\AudioSource.h" />
+    <ClInclude Include="src\Audio\AudioClip .h" />
     <ClInclude Include="src\Components\AudioPlayer.h" />
     <ClInclude Include="src\Components\Camera.h" />
     <ClInclude Include="src\Components\Component.h" />
@@ -728,7 +728,8 @@ IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-bi
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Audio\AudioEngine.cpp" />
-    <ClCompile Include="src\Audio\AudioSource.cpp" />
+    <ClCompile Include="src\Audio\AudioClip .cpp" />
+    <ClCompile Include="src\Audio\SoLoudCommonUtility.cpp" />
     <ClCompile Include="src\Audio\SoLoudCommonUtility.h" />
     <ClCompile Include="src\Components\AudioPlayer.cpp" />
     <ClCompile Include="src\Components\Camera.cpp" />
