--- a/ToyRenderer/ToyRenderer.vcxproj.filters
+++ b/ToyRenderer/ToyRenderer.vcxproj.filters
@@ -1813,6 +1813,9 @@
     <ClInclude Include="src\world\Time.h">
       <Filter>world</Filter>
     </ClInclude>
+    <ClInclude Include="src\Components\AudioListner.h" />
+    <ClInclude Include="src\Components\ComponentsUtility.h" />
+    <ClInclude Include="src\system\DebugBreak.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
@@ -1976,5 +1979,6 @@
     <ClCompile Include="src\world\Time.cpp">
       <Filter>world</Filter>
     </ClCompile>
+    <ClCompile Include="src\Components\AudioListner.cpp" />
   </ItemGroup>
 </Project>
