--- a/ToyRenderer/ToyRenderer.vcxproj
+++ b/ToyRenderer/ToyRenderer.vcxproj
@@ -94,7 +94,7 @@
       <ImportLibrary>..\ToyRenderer-binaries\Debug-windows-x86_64\ToyRenderer\ToyRenderer.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>copy ..\ToyRenderer-binaries\Debug-windows-x86_64\$(ProjectName)\ToyRenderer.dll ..\ToyRenderer-binaries\Debug-windows-x86_64\Sandbox\
+      <Command>copy ..\ToyRenderer-binaries\Debug-windows-x86_64\$(ProjectName)\ToyRenderer.dll ..\ToyRenderer-binaries\Debug-windows-x86_64\Sandbox\ /y
 ROBOCOPY src\ ..\ToyRenderer-binaries\Debug-windows-x86_64\$(ProjectName)\include\ *.h *.hpp *.inl /S
 IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-binaries\Debug-windows-x86_64\SandBox\res\engine &gt; nul) ELSE (xcopy /Q /Y /I $(ProjectDir)res ..\ToyRenderer-binaries\Debug-windows-x86_64\SandBox\res\engine &gt; nul)</Command>
     </PostBuildEvent>
@@ -122,7 +122,7 @@ IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-bi
       <ImportLibrary>..\ToyRenderer-binaries\Release-windows-x86_64\ToyRenderer\ToyRenderer.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>copy ..\ToyRenderer-binaries\Release-windows-x86_64\$(ProjectName)\ToyRenderer.dll ..\ToyRenderer-binaries\Release-windows-x86_64\Sandbox\
+      <Command>copy ..\ToyRenderer-binaries\Release-windows-x86_64\$(ProjectName)\ToyRenderer.dll ..\ToyRenderer-binaries\Release-windows-x86_64\Sandbox\ /y
 ROBOCOPY src\ ..\ToyRenderer-binaries\Release-windows-x86_64\$(ProjectName)\include\ *.h *.hpp *.inl /S
 IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-binaries\Release-windows-x86_64\SandBox\res\engine &gt; nul) ELSE (xcopy /Q /Y /I $(ProjectDir)res ..\ToyRenderer-binaries\Release-windows-x86_64\SandBox\res\engine &gt; nul)</Command>
     </PostBuildEvent>
@@ -150,7 +150,7 @@ IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-bi
       <ImportLibrary>..\ToyRenderer-binaries\Shipping-windows-x86_64\ToyRenderer\ToyRenderer.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
-      <Command>copy ..\ToyRenderer-binaries\Shipping-windows-x86_64\$(ProjectName)\ToyRenderer.dll ..\ToyRenderer-binaries\Shipping-windows-x86_64\Sandbox\
+      <Command>copy ..\ToyRenderer-binaries\Shipping-windows-x86_64\$(ProjectName)\ToyRenderer.dll ..\ToyRenderer-binaries\Shipping-windows-x86_64\Sandbox\ /y
 ROBOCOPY src\ ..\ToyRenderer-binaries\Shipping-windows-x86_64\$(ProjectName)\include\ *.h *.hpp *.inl /S
 IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-binaries\Shipping-windows-x86_64\SandBox\res\engine &gt; nul) ELSE (xcopy /Q /Y /I $(ProjectDir)res ..\ToyRenderer-binaries\Shipping-windows-x86_64\SandBox\res\engine &gt; nul)</Command>
     </PostBuildEvent>
